<resources>
    <string name="app_name" translatable="false">adAstra</string>

    <!-- Signup -->
    <string name="signup">Signup</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>

    <!-- Email verification -->
    <string name="verify_email">Verify your email</string>
    <string name="sent_a_verification">We sent an account verification link to the email</string>
    <string name="log_in_after_verification">Log in after verifying your email</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="Log_in">Log in</string>
    <string name="txt_or">or</string>
    <string name="google_login">Log in with Google</string>
    <string name="missing_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in_new_password">Log in with your new password</string>

    <!-- ForgotPassword -->
    <string name="reset_your_password">Reset your password</string>
    <string name="enter_your_email">Enter your email address and we\'ll send you a link to reset your password</string>
    <string name="reset_password">Reset password</string>
    <string name="confirm_reset">Confirm password reset</string>
    <string name="confirm_reset_message">Are you sure you want to reset your password?\nWe\'ll send you an email to reset it.</string>
    <string name="reset">Reset password</string>

    <!-- Main -->
    <string name="wiki" translatable="false">Wiki</string>
    <string name="iss" translatable="false">ISS</string>
    <string name="home" translatable="false">Home</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="new_authentication">Please re-authenticate to continue</string>

    <!-- Settings -->
    <string name="account_settings">Account settings</string>
    <string name="log_out">Log out</string>
    <string name="confirm_logout">Confirm logout</string>
    <string name="confirm_logout_message">Are you sure you want to log out?</string>
    <string name="user_preferences">Preferences</string>
    <string name="time_format">12-hour format</string>
    <string name="imperial_system">Imperial system</string>
    <string name="iss_notifications">ISS notifications</string>
    <string name="events_notifications">Events notifications</string>
    <string name="language">Language</string>
    <string-array name="languages_string_array" translatable="false">
        <item>English</item>
        <item>Italiano</item>
    </string-array>
    <string name="theme">Theme</string>
    <string-array name="dark_theme_string_array">
        <item>OS setting</item>
        <item>Dark theme</item>
        <item>Light theme</item>
    </string-array>
    <string name="notification_settings">Notification settings</string>
    <string name="report_issue">Report an issue</string>
    <string name="build_information">Build information</string>
    <string name="meme">You are close, keep going... </string>
    <string name="fortytwo" translatable="false">42</string>

    <!-- AccountSettings -->
    <string name="update_username">Update username</string>
    <string name="update_email">Update email address</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="confirm_deletion_message">Are you sure you want to delete your account?\nThis action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- UpdateUsername -->
    <string name="new_username">New username</string>
    <string name="save">Save</string>
    <string name="username_updated">Username updated successfully</string>

    <!-- UpdateEmail -->
    <string name="new_email_address">New email address</string>
    <string name="account_password">adAstra password</string>
    <string name="confirm_email_change_title">Confirm Email Change</string>
    <string name="confirm_email_change_message">Are you sure you want to change your email?\nYou will be required to re-authenticate.</string>
    <string name="ok_update_email">Update email</string>
    <string name="email_updated">Verification email sent to new address</string>
    <string name="ok" translatable="false">OK</string>">

    <!-- ChangePassword -->
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm_password_change_title">Confirm Password Change</string>
    <string name="confirm_password_change_message">Are you sure you want to change your password?\nYou will be required to re-authenticate.</string>
    <string name="ok_update_password">Update password</string>
    <string name="password_changed">Password changed successfully</string>

    <!-- Wiki -->
    <string name="solar_system">Solar System</string>
    <string name="WikiObjs">Planets</string>
    <string name="stars">Stars</string>
    <string name="constellations">Constellations</string>


    <!-- ISS -->
    <string name="iss_longitude">Longitude</string>
    <string name="iss_latitude">Latitude</string>
    <string name="iss_filled">ISS icon filled</string>
    <string name="more_info">More informations</string>
    <string name="altitude">Altitude:</string>
    <string name="velocity">Velocity:</string>
    <string name="visibility">Visibility:</string>
    <string name="iss_eclipsed">Eclipsed</string>
    <string name="iss_daylight">Daylight</string>
    <string name="footprint">Footprint</string>
    <string name="timestamp">Timestamp</string>
    <string name="daynum">DayNum</string>
    <string name="solar_latitude">Solar Latitude</string>
    <string name="solar_longitude">Solar Longitude</string>
    <string name="iss_refresh">Update ISS position</string>
    <string name="iss_info">
        Altitude\nDescribes the height of the International Space Station (ISS) above the Earth\'s surface.
        \n\nVelocity\nIndicates the speed at which the International Space Station (ISS) is traveling.
        \n\nVisibility\nRefers to whether the International Space Station (ISS) is currently in sunlight (daylight) or in Earth\'s shadow (eclipsed).
    </string>
    <string name="close">Close</string>
    <string name="iss_last_update">Last update:</string>
    <string name="iss_updated">ISS position updated successfully</string>
    <string name="your_position">Your position</string>

    <!-- Home -->
    <string name="per_aspera_ad_astra" translatable="false">Per Aspera Ad Astra</string>
    <string name="nasa_pod">Picture of the Day:</string>
    <string name="nasa_by_nasa">by NASA</string>
    <string name="apod_type_not_supported">The content of the day is an unsupported format.</string>
    <string name="click_to_view_it">Click here to view it anyway</string>
    <string name="today_video">Today NASA offers a video.</string>
    <string name="click_to_watch_it">Click here to watch it</string>">

    <!-- Errors -->
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">Password must be at least 6 characters</string>
    <string name="error_invalid_confirm_password">Passwords must match</string>
    <string name="error_invalid_username">The username must be between 3 and 10 characters</string>
    <string name="error_email_send_failed">Failed to send the email</string>
    <string name="error_email_already_exists">Email address already in use</string>
    <string name="error_signup_failure">Signup  failed</string>
    <string name="error_login">Login error. Please try again later</string>
    <string name="error_invalid_login">Invalid email or password</string>
    <string name="error_email_not_verified">Email not verified</string>
    <string name="error_email_not_found">Email not found</string>
    <string name="error_user_info_retrieval">An error occurred while retrieving user information</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_reading_credentials">Error during reading credentials</string>
    <string name="error_email_resend_failed">Failed to resend the email</string>
    <string name="error_deleting_account">Error in deleting the account</string>
    <string name="error_deleting_user_data">Error in deleting user data</string>
    <string name="error_user_email_not_available">User email not available</string>
    <string name="error_username_update_failed">Username update failed</string>
    <string name="error_incorrect_password">Entered password is not correct</string>
    <string name="error_email_update_failed">Email address update failed</string>
    <string name="error_invalid_new_password">Choose a new password different from the previous one</string>
    <string name="error_password_change_failed">Password change failed</string>
    <string name="error_invalid_new_email">Choose a new email address different from the previous one</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="error_iss_update">Error in updating ISS position</string>">
    <string name="error_retrieve_user_position">Unable to get your current location. Check your location permission for adAstra</string>">
</resources>