<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.ResetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_sx_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_dx_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="8dp" />

        <ImageView
            android:id="@+id/imageView_icon_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toStartOf="@+id/guideline_dx_forgot_password"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_forgot_password"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_forgot_password"
            app:srcCompat="@drawable/app_icon" />

        <TextView
            android:id="@+id/textView_reset_your_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reset_your_password"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_dx_forgot_password"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_forgot_password"
            app:layout_constraintTop_toBottomOf="@+id/imageView_icon_forgot_password" />

        <TextView
            android:id="@+id/textView_enter_your_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/enter_your_email"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_dx_forgot_password"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_forgot_password"
            app:layout_constraintTop_toBottomOf="@+id/textView_reset_your_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout_reset_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_dx_forgot_password"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_forgot_password"
            app:layout_constraintTop_toBottomOf="@+id/textView_enter_your_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEmail_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_dx_forgot_password"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_forgot_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>